syntax = "proto2";
package hw.trezor.messages.nem2;

// Sugar for easier handling in Java
option java_package = "com.satoshilabs.trezor.lib.protobuf";
option java_outer_classname = "TrezorMessageNem2";

// The messages defined here reflect the schemas defined in the catbuffer project
// https://github.com/nemtech/catbuffer/tree/master/schemas

/**
 * Request: Ask device for NEM2 public key corresponding to address_n path
 * @start
 * @next NEM2PublicKey
 * @next Failure
 */
message NEM2GetPublicKey {
    repeated uint32 address_n = 1;      // BIP-32 path to derive the key from master node
    optional bool show_display = 2;     // Optionally show on display before sending the result
}

/**
 * Response: Contains NEM2 address derived from device private seed
 * @endTimestamp
 */
message NEM2PublicKey {
    required bytes public_key = 1;    // NEM public key in Base32 encoding
}

/**
 * Request: Ask device to sign transaction
 * @start
 * @next NEM2SignedTx
 * @next Failure
 */
message NEM2SignTx {
    optional NEM2TransactionCommon transaction = 1;    // Common part of transaction
    optional NEM2TransactionCommon multisig = 2;       // Common part of inner transaction for multisig transactions
    optional NEM2TransferTransaction transfer = 3;          // Transfer transaction part
    optional uint32 generationHash = 4;
    optional bool cosigning = 5;

    /**
    * Common types from
    * https://github.com/nemtech/catbuffer/blob/master/schemas/types.cats
    */

    message NEM2Mosaic {
        optional uint64 mosaic_id = 1; // mosaic id
        optional uint64 amount = 2;
    }

    /**
    * Entities reflect definitions from
    * https://github.com/nemtech/catbuffer/blob/master/schemas/entity.cats
    */
    enum NEM2EntityType {
        RESERVED = 0;
        TRANSFER = 16724;
    }

    // END entities


    /**
    * Base Transaction attributes
    * https://github.com/nemtech/catbuffer/blob/master/schemas/transaction.cats
    */
    message NEM2TransactionCommon {
        optional uint32 size = 1;
        optional uint64 signature = 2;
        optional uint32 signer_public_key = 3;
        optional uint32 version = 4;    // defined as uint16 in catbuffer
        optional NEM2EntityType type = 5;
        optional uint64 fee = 6;
        optional uint64 deadline = 7;
    }

    /**
    * Transfer Transaction type attributes
    * https://github.com/nemtech/catbuffer/blob/master/schemas/transaction.cats
    */
    message NEM2TransferTransaction {
        optional uint32 version = 1 [default=1];
        optional NEM2EntityType entityType = 2 [default=TRANSFER];
        optional uint32 recipient_address = 3;
        optional uint32 message_size = 4;
        optional uint32 mosaics_count = 5;
        optional bytes message = 6;
        repeated NEM2Mosaic mosaics = 7;
    }
}

/**
 * Response: Contains NEM2 transaction data and signature
 * @end
 */
 message NEM2SignedTx {
    optional bytes data = 1;        // Transaction data
    optional bytes signature = 2;   // Signature for the transaction
}